--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -43,6 +43,10 @@
     padding: 0;
     clear: both;
     list-style-type: none;
+
+    @include breakpoint($large) {
+      padding-left: 4em;
+    }
   }
 }
 
