--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -22,7 +22,7 @@
     // @include prefix(0.5 of 12);
     // @include suffix(2 of 12);
     float: left;
-    // color: aqua
+    padding-left: 4em;
   }
 
   .page__inner-wrap {
